--- a/.github/workflows/trickyinfo.yml
+++ b/.github/workflows/trickyinfo.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Connect your NGROK account
       run: .\ngrok.exe authtoken $Env:NGROK_AUTH
       env:
-        NGROK_AUTH: ${{ secrets.NGROK_AUTH }}
+        NGROK_AUTH: ${{ secrets.NGROK_AUTH 1wZayOtcMlAea2WyJqIIFG6hyhh_2UmCzXxj9STowcb18UTtZ}}
     - name: Download Important Files.
       run: |
         Invoke-WebRequest https://github.com/extizi/WindowsRDP/raw/main/NGROK-AP.bat -OutFile NGROK-AP.bat
